Fixed collapsible container collapse button position bug.

--- a/static-src/styles/maps.scss
+++ b/static-src/styles/maps.scss
@@ -9,17 +9,21 @@
 
     h2 {
 
+        position: relative;
         width: 100%;
-        padding: .5rem .5rem .7rem .5rem;
+        margin-bottom: .2rem;
+        padding: .5rem 3.5rem .5rem .5rem;
         font-size: 1.1em;
         text-transform: lowercase;
         cursor: pointer;
 
         &::after {
             content: '(–)';
-            display: inline-block;
-            min-width: 3em;
-            text-align: right;
+            display: block;
+            position: absolute;
+            top: 50%;
+            right: .5rem;
+            transform: translateY(-50%);
 
         }
 
